# combootcha

./: .editorconfig  .gitattributes  Cargo.toml  LICENSE  README.md  SETUP.md  TODO.md  UNAUTOMATED.md  _typos.toml  build.rs
combootcha/: Cargo.toml
combootcha/src/: Brewfile  jettison.rs  main.rs
personal/: Cargo.toml
personal/src/: main.rs
scoby/: Cargo.toml  build.rs
scoby/scripts/: Cargo.toml
scoby/scripts/src/: lib.rs
scoby/src/: Brewfile  Cathode-2.4.1.tar.xz  default_browser.rs  firewall.rs  fs.rs  git.rs  hammerspoon.rs  hg.rs  homebrew.rs  iterm2.rs  japicc.rs  karabiner.rs  lib.rs  login_items.rs  login_shells.rs  main.rs  path.rs  power_management.rs  preferences.rs  quicksilver.rs  rust.rs  scripts.rs  ssh-config  ssh.rs  standard_user.rs  text_buffer.rs  user.rs  user_defaults.rs  verbose_command.rs
scoby/src/brewfiles/: personal.rb  work.rb
scoby/src/emacs/: mod.rs
scoby/src/emacs/spacemacs/: init.el
scoby/src/ffi/: user_defaults.c  user_defaults.h
scoby/src/firefox/: autoconfig.js  firefox.cfg  mod.rs
scoby/src/git/: ignore-global.txt  mod.rs
scoby/src/hammerspoon/: init.lua  mod.rs
scoby/src/hg/: mod.rs
scoby/src/homebrew/: Brewfile  mod.rs
scoby/src/homebrew/brewfile/: post  pre
scoby/src/network_link_conditioner/: mod.rs
scoby/src/quicksilver/: mod.rs
scoby/src/ssh/: config  mod.rs
scoby/src/ssh-config/: work
scoby/src/ssh/config/: post  pre
scoby/src/zsh/: mod.rs  profile.zsh  rc.zsh
src/: Brewfile  Network Link Conditioner.prefPane.tar.xz  cathode.rs  default_browser.rs  defaults.rs  env.rs  fs.rs  git.rs  hammerspoon-init.lua  hammerspoon.rs  hg.rs  homebrew.rs  iterm2.rs  japicc.rs  karabiner.rs  logging.rs  login_items.rs  login_shells.rs  main.rs  network-link-conditioner.tar.xz  network_link_conditioner.rs  power_management.rs  preferences.rs  quicksilver.rs  scripts.rs  ssh-config  ssh.rs  user.rs  user_defaults.rs  verbose_command.rs
src/brewfiles/: personal.rb  shared.rb  work.rb
src/ffi/: defaults.c  defaults.h  user_defaults.c  user_defaults.h
