[package]
name = "combootcha"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[dependencies]
anyhow = "1"
log = { version = "0.4", features = ["std"] }
users = "0.11"
scoby = { path = "../scoby" }
